--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,31 @@
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650293028159/work
+beautifulsoup4
 bottle==0.12.23
-Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
+Bottleneck
 brotlipy==0.7.0
-certifi @ file:///C:/b/abs_ac29jvt43w/croot/certifi_1665076682579/work/certifi
-cffi @ file:///C:/Windows/Temp/abs_6808y9x40v/croots/recipe/cffi_1659598653989/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-cryptography @ file:///C:/b/abs_36x9ifdcl4/croot/cryptography_1665612655344/work
-html5lib @ file:///Users/ktietz/demo/mc3/conda-bld/html5lib_1629144453894/work
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-lxml @ file:///C:/ci/lxml_1657527492694/work
+certifi
+cffi
+cryptography
+html5lib
+idna
+lxml
 mkl-fft==1.3.1
-mkl-random @ file:///C:/ci_310/mkl_random_1643050563308/work
+mkl-random
 mkl-service==2.4.0
-numexpr @ file:///C:/Windows/Temp/abs_e2036a32-9fe9-47f3-a04c-dbb1c232ba4b334exiur/croots/recipe/numexpr_1656940304835/work
-numpy @ file:///C:/b/abs_53f_dbvhzc/croot/numpy_and_numpy_base_1665773185489/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/b/abs_cdcgk91igc/croots/recipe/pandas_1663772960432/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_7f_7lba6rl/croots/recipe/pyparsing_1661452540662/work
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///C:/Windows/TEMP/abs_90eacd4e-8eff-491e-b26e-f707eba2cbe1ujvbhqz1/croots/recipe/pytz_1654762631027/work
-requests @ file:///C:/ci/requests_1657735340829/work
-selenium @ file:///C:/ci_310/selenium_1642091463950/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-soupsieve @ file:///C:/b/abs_fasraqxhlv/croot/soupsieve_1666296394662/work
-urllib3 @ file:///C:/b/abs_a8_3vfznn_/croot/urllib3_1666298943664/work
+numexpr
+numpy
+packaging
+pandas
+pycparser
+pyOpenSSL
+pyparsing
+PySocks
+python-dateutil
+pytz
+requests
+selenium
+six
+soupsieve
+urllib3
 webencodings==0.5.1
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
+win-inet-pton
 wincertstore==0.2
