--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,6 @@
-beautifulsoup4
-bottle==0.12.23
-Bottleneck
-brotlipy==0.7.0
-certifi
-cffi
-cryptography
-html5lib
-idna
-lxml
-mkl-fft==1.3.1
-mkl-random
-mkl-service==2.4.0
-numexpr
-numpy
-packaging
-pandas
-pycparser
-pyOpenSSL
-pyparsing
-PySocks
-python-dateutil
-pytz
-requests
-selenium
-six
-soupsieve
-urllib3
-webencodings==0.5.1
-win-inet-pton
-wincertstore==0.2
+requests=2.28.2
+aiohttp=3.8.4
+beautifulsoup4=4.11.2
+pandas=1.5.3
+lxml=4.9.2
+xlsxwriter=3.0.9
